<resources>
    <string-array name="diary_type_list">
        <item>Work</item>
        <item>Study</item>
        <item>Leisure</item>
        <item>Sport</item>
    </string-array>
    <string name="app_name">MyDiary</string>
    <string name="diary_title_hint">Enter a title for the diary entry</string>
    <string name="diary_title_label">Title</string>
    <string name="diary_place">Place</string>
    <string name="diary_comments">Comments</string>

    <string name="diary_type">Choose a diary type</string>
    <string name="diary_type_label">Type</string>

    <string name="new_diary">Log</string>
    <string name="user_settings">Settings</string>

    <string name="settings_name_label">Name</string>
    <string name="settings_email_label">Email</string>
    <string name="settings_gender_label">Gender</string>

    <string name="settings_id_label">ID</string>
    <string name="settings_id_hint">Enter your ID.</string>

    <string name="settings_comment_hint">Enter your comments here.</string>

    <string name="settings_name_hint">Enter your name.</string>
    <string name="settings_email_hint">Enter an email.</string>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
