<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/settings_id_label"
            android:id="@+id/textViewId"
            android:layout_margin="4dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/settings_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="16dp"
            android:hint="@string/settings_id_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/settings_name_label"
            android:id="@+id/textView"
            android:layout_margin="4dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/settings_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="16dp"
            android:hint="@string/settings_name_hint"/>
    </LinearLayout>

    <View android:layout_width="fill_parent"
          android:layout_height="1dip"
          android:layout_below="@+id/settings_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_email_label"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:id="@+id/textView2"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/settings_email_hint"
            android:layout_marginLeft="25dp"
            android:ems="10"
            android:id="@+id/settings_email"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_gender_label"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:id="@+id/textView3"
            android:labelFor="@+id/gender_list" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/diary_type"
            android:spinnerMode="dropdown"
            android:entries="@array/gender_list"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="16dp"
            android:prompt="@+id/gender_list"
            android:layout_weight="1" />

    </LinearLayout>

    <View android:layout_width="fill_parent"
          android:layout_height="1dip"
          android:background="@color/accent_material_light"
          android:layout_below="@+id/gender_list"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/settings_comments"
        android:hint="@string/settings_comment_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:minLines="2"
        android:maxLines="3"
        android:lines="2"
        android:layout_margin="16dp"
        android:lineSpacingExtra="1sp" />

    <View android:layout_width="fill_parent"
          android:layout_height="1dip"
          android:background="@color/accent_material_light"
          android:layout_below="@+id/settings_comments"/>

</LinearLayout>