<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
            <ImageView android:id="@+id/diary_photo"
                       android:layout_width="80dp"
                       android:layout_height="80dp"
                       android:scaleType="centerInside"
                       android:background="@android:color/darker_gray"
                       android:cropToPadding="true"/>
            <ImageButton android:id="@+id/diary_camera"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@android:drawable/ic_menu_camera"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diary_title_label"/>
            <EditText
                android:id="@+id/diary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diary_title_hint"/>


        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Place"/>

    <EditText
        android:id="@+id/diary_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Location here"
        />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Activity Type"/>
    <Spinner
        android:id="@+id/diary_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/diary_type_list"
        android:prompt="@+id/diary_type"
        android:spinnerMode="dropdown"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Duration"/>
    <EditText
        android:id="@+id/diary_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the Duration "
        android:ems="10"
        android:inputType="number"
        />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_comments"/>
    <EditText
        android:id="@+id/diary_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Comments here"
        android:inputType="textMultiLine"
        />
    <Button
        android:id="@+id/diary_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="80dp"
                  android:layout_marginLeft="16dp"
                  android:layout_marginTop="16dp"
                  android:orientation="horizontal"
                  android:weightSum="1"
                  android:gravity="bottom">

        <ImageButton
            android:id="@+id/diary_save"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="0.50"
            android:src="@android:drawable/ic_menu_save"/>

        <ImageButton android:id="@+id/diary_cancel"
                     android:layout_height="74dp"
                     android:src="@android:drawable/ic_menu_close_clear_cancel"
                     android:layout_width="wrap_content"
                     android:layout_weight="0.50" />

    </LinearLayout>

</LinearLayout>
